--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -23,21 +23,18 @@ The main goal for both sides is to reduce the amount of aircraft of the opposing
 
 == User stories ==
 
-=== General ===
+=== Preparations ===
 
-==== Client login ====
+==== Client login/logout ====
 
 The player starts the game _IL-2 Sturmovik: Cliffs of Dover_, selects _Multiplayer_ and then _Client_ in the menu, browses the server list and then connects to the server running IL2DCE. Once the mission has loaded he selects an army. He is informed over the current state and task of each active air group. He can then select one of the aircraft in the aircraft list.
 
-==== Client logout ====
-
 The player disconnects from the server running IL2DCE. If the mission is not finished his aircraft will continue under AI control.
 
-==== Server start ====
+
+==== Server start/end ====
 
 The host starts the dedicated server application of _IL-2 Sturmovik: Cliffs of Dover_ and either loads the initial campaign template to start a new campaign or any save-game of an existing campaign. The campaign progress continues as soon as the battle is started.
-
-==== Server end ====
 
 The host stops the battle and closes the dedicated server application. The current state is stored as a save-game.
 
