--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-This document contains the vision, examples for campaign scenarios and user stories that should help to identify the requirements for IL2DCE.
+This document contains the vision, examples for campaign scenarios and use cases that should help to identify the requirements for IL2DCE.
 
 Note that this document only considers the current development stage and may change considerably in later stages.
 
@@ -21,20 +21,24 @@ The Luftwaffe tries to crush Fighter Command. Their bombers attack the airfields
 
 The main goal for both sides is to reduce the amount of aircraft of the opposing side.
 
-== User stories ==
+== Use cases ==
 
-=== Preparations ===
+=== General ===
 
-==== Client login/logout ====
+==== Client login ====
 
 The player starts the game _IL-2 Sturmovik: Cliffs of Dover_, selects _Multiplayer_ and then _Client_ in the menu, browses the server list and then connects to the server running IL2DCE. Once the mission has loaded he selects an army. He is informed over the current state and task of each active air group. He can then select one of the aircraft in the aircraft list.
+
+==== Client logout ====
 
 The player disconnects from the server running IL2DCE. If the mission is not finished his aircraft will continue under AI control.
 
 
-==== Server start/end ====
+==== Server start ====
 
 The host starts the dedicated server application of _IL-2 Sturmovik: Cliffs of Dover_ and either loads the initial campaign template to start a new campaign or any save-game of an existing campaign. The campaign progress continues as soon as the battle is started.
+
+==== Server end ====
 
 The host stops the battle and closes the dedicated server application. The current state is stored as a save-game.
 
@@ -61,6 +65,10 @@ This campaign type is recommended for fictional and semi-historical campaigns.
 For a semi-dynamic campaign the strategic and tactical situation for ground units, air units, supplies and reinforcements is defined for various stages of the campaign. The interval between these stages may vary. Between two defined stages the progress of the campaign evolves dynamic. At the end of one stage the definitions of the following stage are applied, however certain information are propagated forward, like strength, supplies and experience of the units. To reduce the inflicted conflicts between the dynamic progress and the defined situation of the following stage the intervals between two stages should be small.
 
 This campaign type is recommended for historical campaigns.
+
+== Functional Requirments ==
+
+See [http://code.google.com/p/il2dce/issues/list Issues].
 
 == Non-functional Requirments ==
 
