Edited wiki page Software_Requirements_Specification through web user interface.

--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -52,6 +52,10 @@ The host stops the battle and closes the dedicated server application. The curre
 
 ==== Defensive Patrol ====
 
+=== Persistent world ===
+
+==== Actor destroyed ====
+
 === Campaign creation ===
 
 ==== Dynamic campaign ====
