Edited wiki page Software_Requirements_Specification through web user interface.

--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -56,7 +56,7 @@ The host stops the battle and closes the dedicated server application. The curre
 
 ==== Actor destroyed ====
 
-=== Campaign creation ===
+=== Campaign types ===
 
 ==== Dynamic campaign ====
 
