--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-This document contains the vision, examples for campaign scenarios and use cases that should help to identify the requirements for IL2DCE.
+This document contains the vision, examples for campaign scenarios and use cases. This considerations should help to identify the requirements for IL2DCE.
 
 Note that this document only considers the current development stage and may change considerably in later stages.
 
