--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -47,7 +47,7 @@ The host stops the battle and closes the dedicated server application. The curre
 
 A new mission for a random air group is started periodically. The mission type depends on the capabilities of the air group's aircraft. The air group must remain idle for a certain time to allow players to select an aircraft, read the briefing and prepare for the flight. Some mission types are escorted, these trigger a escort mission for another random air group.
 
-=== Air missions ===
+=== Air mission types ===
 
 ==== Ground attack mission ====
 
