--- a/wiki/Software_Design_Description.wiki
+++ b/wiki/Software_Design_Description.wiki
@@ -17,11 +17,11 @@ This document contains a overview and a description of the software components.
 
 The `IPersistentWorld` represents the current campaign state. The state contains different types of group (e.g. `AirGroup`, `GroundGroup`, `NavalGroup`, `SupplyGroup` and `ReinforcementGroup`). The `IPersistentWorld` also contains a list of `IHeadquarters`. Any change of the campaign state has to be propagated to the contained `IHeadquarters`, which then can interact with the `IPersistentWorld` to react on the change. 
 
-The `IPersistentWorld` provides a interface to send a `Command` to the contained groups. The `Command` will then be executed by the group in the persistent world.
+The `IPersistentWorld` provides a interface to send a `ICommand` to the contained groups. The `ICommand` will then be executed by the group in the persistent world.
 
-There are two different implementations for the `IPersistentWorld`. The `Mission` represents the real-time progress the campaign. The real-time progress is provided by the engine of _IL-2 Sturmovik: Cliffs of Dover_. The `Mission` listens to the events that are fired by the _IL-2 Sturmovik: Cliffs of Dover_ and applies them on the campaign state. To execute a `Command` it will be translated into calls to the engine.
+There are two different implementations for the `IPersistentWorld`. The `Mission` represents the real-time progress the campaign. The real-time progress is provided by the engine of _IL-2 Sturmovik: Cliffs of Dover_. The `Mission` listens to the events that are fired by the _IL-2 Sturmovik: Cliffs of Dover_ and applies them on the campaign state. To execute a `ICommand` it will be translated into calls to the engine.
 
-The `Simulator` represents the time-compressed progress of the campaign that is used to skip time spans that should not progress in real-time. The time-compressed progress is not provided by the engine of _IL-2 Sturmovik: Cliffs of Dover_. Hence a simplified simulation the `Command` calls must be used to change the campaign state.
+The `Simulator` represents the time-compressed progress of the campaign that is used to skip time spans that should not progress in real-time. The time-compressed progress is not provided by the engine of _IL-2 Sturmovik: Cliffs of Dover_. Hence a simplified simulation the `ICommand` calls must be used to change the campaign state.
 
 === `IHeadquarters` ===
 
