--- a/wiki/Software_Design_Description.wiki
+++ b/wiki/Software_Design_Description.wiki
@@ -1,4 +1,4 @@
-#summary Software Design Description of IL2DCE.
+#summary This document contains a overview and a description of the software components.
 #labels Phase-Design,Draft
 
 = Introduction =
