Edited wiki page Software_Design_Description through web user interface.

--- a/wiki/Software_Design_Description.wiki
+++ b/wiki/Software_Design_Description.wiki
@@ -1,4 +1,4 @@
-#summary Design overview and component description.
+#summary Overview and component design.
 #labels Phase-Design,Draft
 
 = Introduction =
