Edited wiki page Software_Requirements_Specification through web user interface.

--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -45,6 +45,8 @@ The host stops the battle, the current state is stored as a save-game. Then the 
 
 A new mission for a random air group is started periodically. The mission type depends on the capabilities of the air group's aircraft. The air group must remain idle for a certain time to allow players to select an aircraft, read the briefing and prepare for the flight. Some mission types are escorted, they trigger a escort mission for another random air group.
 
+=== Radar, Acoustics detectors, Observer Corps ===
+
 === Air mission types ===
 
 ==== Ground attack mission ====
