Edited wiki page Software_Requirements_Specification through web user interface.

--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-This document contains the vision, examples for campaign scenarios and use cases. These considerations should help to identify the requirements for IL2DCE.
+This document contains the vision, examples for campaign scenarios, the functional requirements in form of use cases and the non-functional requirements.
 
 == Vision ==
 
