--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -24,6 +24,17 @@ The main goal for both sides is to reduce the amount of aircraft of the opposing
 The following diagram contains the actors and the high level use cases of IL2DCE.
 [https://docs.google.com/drawings/pub?id=1anvH6yd0M7m6vCF5E12WWAKNYHxmKpWbr3MKWR6EGAc&w=1146&h=777&nonsense=none.png]
 
+=== Host world ===
+
+Actor: Server admin
+
+Steps:
+ # Open server: The host launches the dedicated server application of _IL-2 Sturmovik: Cliffs of Dover_.
+ # Load mission: The host loads the mission, either a initial campaign template to start a new campaign or a save-game to continue an existing campaign.
+ # Start battle: The campaign progress continues as soon as the battle is started.
+ # Stop battle: The campaign progress is stopped and a save-game is created.
+ # Close server: The dedicated server application can be closed. 
+
 === General ===
 
 ==== Client login ====
@@ -33,14 +44,6 @@ The player starts the game _IL-2 Sturmovik: Cliffs of Dover_, selects _Multiplay
 ==== Client logout ====
 
 The player disconnects from the server running IL2DCE. If the mission is not finished his aircraft will continue under AI control.
-
-==== Server start ====
-
-The host starts the dedicated server application of _IL-2 Sturmovik: Cliffs of Dover_ and either loads the initial campaign template to start a new campaign or any save-game to continue an existing campaign. The campaign progress continues as soon as the battle is started.
-
-==== Server end ====
-
-The host stops the battle, the current state is stored as a save-game. Then the the dedicated server application can be closed. 
 
 === Commander-in-chief ===
 
